posiGen_FullsendBox/src/objects/Gift_Card__c.object
<CustomObject>
    <description>Tracks payouts to customers for referrals or other promotions.</description>
    <fields>
        <fullName>AMEX_CID__c</fullName>
        <label>AMEX CID</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>AMEX_Number__c</fullName>
        <label>AMEX Number</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Box_Sequence_Num__c</fullName>
        <label>Box Sequence #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Box_Date__c</fullName>
        <label>Card Box Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Card_Box_WO_Number__c</fullName>
        <label>Card Box WO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <label>Import ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payout_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payout Batch</label>
        <referenceTo>Payout_Batch__c</referenceTo>
        <relationshipName>Payouts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>AMEX Gift Card</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ruth&apos;s Chris Gift Card</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Gift Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Payout_Batch__c</columns>
        <columns>Type__c</columns>
        <columns>Card_Box_Date__c</columns>
        <columns>Box_Sequence_Num__c</columns>
        <columns>AMEX_CID__c</columns>
        <columns>AMEX_Number__c</columns>
        <columns>Amount__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CID_Fill_In</fullName>
        <columns>NAME</columns>
        <columns>Payout_Batch__c</columns>
        <columns>AMEX_CID__c</columns>
        <columns>AMEX_Number__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>CID Fill In</label>
    </listViews>
    <nameField>
        <displayFormat>GC-{00000}</displayFormat>
        <label>GCID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>